fix(FiltersContext): update start and end date calculations to reflect the current month fix(LeaveApplication): adjust date comparison to prevent status change before yesterday style(SalesGrowth): add margin-top to sales growth component for better spacing fix(LatestAttendance): correct tag usage in API calls and improve code formatting

--- a/src/pages/SalesData/salesGrowth/style.scss
+++ b/src/pages/SalesData/salesGrowth/style.scss
@@ -70,6 +70,7 @@
         gap: 20px;
         align-items: center;
         flex-wrap: wrap;
+        margin-top: 10px;
         // justify-content: center;
         font-size: 0.9rem;
 
